<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tanits</string>
    <string name="detail_activity_name">Message</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="navigation_menu_item_title_messages">Messages</string>
    <string name="navigation_menu_item_title_profile">Profile</string>
    <string name="navigation_menu_item_title_about">About Us</string>
    <string name="navigation_menu_item_title_logout">Logout</string>

    <!-- Navigation header -->
    <string name="username">Username</string>
    <string name="email">username@user.com</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_fragment_titles">
        <item>Messages</item>
        <item>Profile</item>
        <item>About Us</item>
    </string-array>

    <string name="lorem_ipsum_tiny">Lorem Ipsum</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor pulvinar orci, sit amet luctus dolor cursus at. Nam non augue dolor. Praesent aliquet dictum rutrum.</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor pulvinar orci, sit amet luctus dolor cursus at. Nam non augue dolor. Praesent aliquet dictum rutrum. Fusce in rhoncus lacus, non convallis velit. Aenean metus ex, tempus eget augue nec, finibus laoreet libero. Sed eget iaculis nisi. Maecenas ut diam dictum, rutrum tellus at, blandit mauris. Duis congue massa eu turpis scelerisque, et convallis felis tempus. In non iaculis tellus. Duis justo diam, sollicitudin id lectus ac, consectetur aliquam dolor. Etiam ullamcorper finibus massa, ut elementum lectus tincidunt sed. Aliquam iaculis eu tellus sit amet laoreet. Quisque vehicula, neque sit amet tincidunt ullamcorper, tortor est ullamcorper arcu, at finibus neque elit id diam.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor pulvinar orci, sit amet luctus dolor cursus at. Nam non augue dolor. Praesent aliquet dictum rutrum. Fusce in rhoncus lacus, non convallis velit. Aenean metus ex, tempus eget augue nec, finibus laoreet libero. Sed eget iaculis nisi. Maecenas ut diam dictum, rutrum tellus at, blandit mauris. Duis congue massa eu turpis scelerisque, et convallis felis tempus. In non iaculis tellus. Duis justo diam, sollicitudin id lectus ac, consectetur aliquam dolor. Etiam ullamcorper finibus massa, ut elementum lectus tincidunt sed. Aliquam iaculis eu tellus sit amet laoreet. Quisque vehicula, neque sit amet tincidunt ullamcorper, tortor est ullamcorper arcu, at finibus neque elit id diam.\nFusce efficitur luctus turpis at mollis. Etiam sagittis, est sed mattis bibendum, est sapien lobortis nunc, suscipit condimentum ante risus eget lorem. In sit amet convallis nunc, eget porttitor tortor. Proin ornare lorem quam, ac maximus tortor tempus eget. Nam suscipit sed ex ut aliquam. Phasellus mattis efficitur elementum. Nam in dui erat. Fusce et felis at ligula accumsan accumsan at a massa. Cras vel enim tempor, tincidunt lacus nec, aliquet augue. Curabitur semper risus in odio tristique, eu ornare risus blandit.\nQuisque massa nunc, fringilla a tristique ac, tempus in diam. Morbi in velit eros. Donec hendrerit nibh aliquet, accumsan lectus vitae, dictum ante. Ut dictum vehicula nisl id suscipit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam sit amet erat ornare, ultrices arcu et, interdum lectus. Integer rhoncus sed ex quis vehicula.\nFusce tristique justo at tellus laoreet dictum. Aenean id ligula sollicitudin, pulvinar turpis in, semper libero. Nam non tristique felis. Aliquam auctor sem nec lorem laoreet lobortis. Donec eu consectetur mi. Nulla rhoncus sodales nulla, sed maximus arcu aliquet non. Suspendisse quis libero sit amet magna tempor volutpat. Nam posuere, ex non congue cursus, nisl metus aliquam risus, et condimentum leo turpis sed lacus. Praesent lobortis nunc ac metus posuere, placerat pretium diam scelerisque. Donec rhoncus ut orci eu auctor. Etiam laoreet erat purus.</string>
    <string name="lorem_ipsum_very_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor pulvinar orci, sit amet luctus dolor cursus at. Nam non augue dolor. Praesent aliquet dictum rutrum. Fusce in rhoncus lacus, non convallis velit. Aenean metus ex, tempus eget augue nec, finibus laoreet libero. Sed eget iaculis nisi. Maecenas ut diam dictum, rutrum tellus at, blandit mauris. Duis congue massa eu turpis scelerisque, et convallis felis tempus. In non iaculis tellus. Duis justo diam, sollicitudin id lectus ac, consectetur aliquam dolor. Etiam ullamcorper finibus massa, ut elementum lectus tincidunt sed. Aliquam iaculis eu tellus sit amet laoreet. Quisque vehicula, neque sit amet tincidunt ullamcorper, tortor est ullamcorper arcu, at finibus neque elit id diam.\nFusce efficitur luctus turpis at mollis. Etiam sagittis, est sed mattis bibendum, est sapien lobortis nunc, suscipit condimentum ante risus eget lorem. In sit amet convallis nunc, eget porttitor tortor. Proin ornare lorem quam, ac maximus tortor tempus eget. Nam suscipit sed ex ut aliquam. Phasellus mattis efficitur elementum. Nam in dui erat. Fusce et felis at ligula accumsan accumsan at a massa. Cras vel enim tempor, tincidunt lacus nec, aliquet augue. Curabitur semper risus in odio tristique, eu ornare risus blandit.\nQuisque massa nunc, fringilla a tristique ac, tempus in diam. Morbi in velit eros. Donec hendrerit nibh aliquet, accumsan lectus vitae, dictum ante. Ut dictum vehicula nisl id suscipit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam sit amet erat ornare, ultrices arcu et, interdum lectus. Integer rhoncus sed ex quis vehicula.\nFusce tristique justo at tellus laoreet dictum. Aenean id ligula sollicitudin, pulvinar turpis in, semper libero. Nam non tristique felis. Aliquam auctor sem nec lorem laoreet lobortis. Donec eu consectetur mi. Nulla rhoncus sodales nulla, sed maximus arcu aliquet non. Suspendisse quis libero sit amet magna tempor volutpat. Nam posuere, ex non congue cursus, nisl metus aliquam risus, et condimentum leo turpis sed lacus. Praesent lobortis nunc ac metus posuere, placerat pretium diam scelerisque. Donec rhoncus ut orci eu auctor. Etiam laoreet erat purus.\nVivamus sed lacus sed diam interdum interdum ullamcorper id dui. Quisque imperdiet velit ac orci ultrices porttitor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec a laoreet dui. Donec nec tempus odio, a ullamcorper quam. Etiam gravida mi quis lectus viverra congue. Ut vitae diam vestibulum, sodales nisi at, sagittis metus. Etiam at euismod augue. Nam vel odio quis sem dignissim mattis vel eget lorem. Mauris tempus, dolor id volutpat lobortis, ante nisi efficitur odio, vitae pretium turpis libero vitae purus. Praesent nec justo faucibus, feugiat justo ac, pulvinar ligula. Vivamus in congue magna, non suscipit ipsum. Integer rutrum, nulla ac aliquam elementum, est risus porta nulla, eu tincidunt nisl nibh sit amet ipsum. Vestibulum egestas ligula quam, sed luctus diam bibendum at. Nullam maximus suscipit dolor aliquet congue.</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="exception_text"> must implement </string>

    <!-- Profile fragment -->
    <string name="button_text_save">Save</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthdate">Birthdate of your child</string>

    <string name="error_message_name">Enter your name</string>
    <string name="error_message_birthdate">Enter the birthdate of your child</string>

    <string name="alert_title">Save profile</string>
    <string name="alert_message">Do you want to change your profile settings?</string>
    <string name="alert_positiv">Save</string>
    <string name="alert_negativ">Cancel</string>

    <string name="message_save_successfull">Your profile has been saved successfully.</string>


    <!-- Messages categorization menuitems -->
    <string name="menu_item_categorization_all">All</string>
    <string name="menu_item_categorization_active">Active</string>
    <string name="menu_item_categorization_done">Done</string>
    <string name="menu_item_categorization_rejected">Rejected</string>

    <!-- Log and other messages -->
    <string name="log_messages_menu_selection">Menu selection is not handled. ItemId: <xliff:g example="100" id="itemid">%d</xliff:g></string>
    <string name="log_messages_status_settings">Status setting is not handled. ItemId: <xliff:g example="100" id="itemid">%d</xliff:g></string>
    <string name="log_user_profile_data">User profile data is not available</string>
    <string name="log_unknown_message_status">Internal error: unknown message status: <xliff:g example="100" id="statusid">%d</xliff:g></string>
    <string name="log_unknown_message_status_string">Internal error: unknown message status: <xliff:g example="100" id="statusid">%s</xliff:g></string>
    <string name="log_internal_error_unknown_message_status_filter">Internal error: unknown message status filter: <xliff:g example="100" id="statusfilter">%d</xliff:g></string>
    <string name="log_error_unknown_message_status_filter">Error: unknown message status filter: <xliff:g example="1" id="filter">%d</xliff:g></string>
    <string name="log_user_profile">User profile is not available</string>
    <string name="log_user_birthday">User birthdate is not available</string>
    <string name="no_messages">No messages</string>
    <string name="no_message_detail">Cannot retrieve message detail</string>
    <string name="log_error_login">Internal error at login:</string>
    <string name="log_error_missing_message_data">Internal error, missing message data in message details fragment</string>

    <!-- Email datas -->
    <string name="subject_feedback">Feedback</string>
    <string name="subject_question">Question</string>
    <string name="email_address">judit@juhasz.name</string>
    <string name="no_email_client_selected">Choose an Email client</string>
    <string name="email_scheme">mailto</string>

    <string name="path_profile">profiles/</string>
    <string name="path_messageExtract">messageExtract</string>
    <string name="path_messageStatus">messageStatus/</string>
    <string name="path_messageDetail">messageDetail/</string>
    <string name="message_content">content</string>
    <string name="message_status">status</string>
    <string name="message_subject">subject</string>
    <string name="message_summary">summary</string>
    <string name="message_dayOffset">dayOffset</string>
    <string name="save_message_status">messageStatus/<xliff:g example="1" id="userid">%s</xliff:g>/<xliff:g example="1" id="messageid">%s</xliff:g>/status</string>
    <string name="empty_text">No more messages</string>
    <string name="set_birthdate">You are almost ready to start.\nPlease set your child\'s birthdate on your profile\nin order to get messages.</string>

    <string name="date_format_with_year">MMMM d, Y</string>
    <string name="date_format_without_year">MMMM d</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text_date">EXAMPLE</string>
    <string name="appwidget_text_author">Tanits</string>

</resources>
